Fix another layout problem.

--- a/src/index.sass
+++ b/src/index.sass
@@ -52,7 +52,6 @@ article
   box-shadow: inset -0.05rem -0.05rem 0.1rem 0.05rem #05182c, inset 0.05rem 0.05rem 0.1rem 0.05rem #1a7ad7
 
 ul
-  clear: both
   display: inline-block
   background: linear-gradient(to bottom, #447844, #2b4e2b)
   color: white
